--- a/herams/js/overview/directives/filters/advanced_search.html
+++ b/herams/js/overview/directives/filters/advanced_search.html
@@ -12,9 +12,17 @@
             </button>
         </div>
     </div>
+
+<!--
+    <div class="advanced-filters-fltr">
+        <input type="text" ng-model="filtrsSrch" class="form-control" placeholder="search filters" aria-label="Username" aria-describedby="basic-addon1">
+        <span>Search filters with: {{filtrsSrch}}</span>
+    </div>
+
+-->
      <ul>
          <li class="group-name" ng-repeat="group in data track by $index">
-             <div class="group-title" ng-click="toggleQuestions($event,group.id)" ng-class="greyoutCls(group.title)">
+             <div class="group-title" ng-click="toggleQuestions($event,group.id,group.title)" ng-class="greyoutCls(group.title)">
                  <img src="img/menu_open.svg"  ng-if="!isGrpOpened(group.id)">
                  <img src="img/menu_close.svg" ng-if="isGrpOpened(group.id)">
                  <span ng-bind-html="group.title"></span>
