--- a/herams/overview.html
+++ b/herams/overview.html
@@ -139,7 +139,7 @@
                                     </div>
                                     <div class="filter-advanced-view">
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#advncdViewModal">
-                                          View all ({{getAdvancedFiltersCnt()}})
+                                          View filters ({{getAdvancedFiltersCnt()}})
                                         </button>
                                     </div>
                                     <div class="filter-btns">
@@ -305,10 +305,10 @@
 
   <!-- inject:js -->
   <script src="config/config.js"></script>
-  <script src="js/common/directives/user_popover.js"></script>
   <script src="js/common/services/commonSvc.js"></script>
   <script src="js/common/services/esritogeojsonSvc.js"></script>
   <script src="js/common/services/LayerPopupSvc.js"></script>
+  <script src="js/common/directives/user_popover.js"></script>
   <script src="js/overview/controllers/MainCtrl.js"></script>
   <script src="js/overview/directives/hfmap.js"></script>
   <script src="js/overview/services/chartsSvc.js"></script>
