--- a/herams/overview.html
+++ b/herams/overview.html
@@ -143,7 +143,7 @@
                                         </button>
                                     </div>
                                     <div class="filter-btns">
-                                        <button type="button" class="btn btn-secondary" ng-click="clearMainFilters()"><i class="fas fa-times"></i>Clear</button>
+                                        <button type="button" class="btn btn-secondary" ng-click="clearMainFilters()"><i class="fas fa-times"></i>Reset</button>
                                         <button type="button" class="btn btn-secondary" ng-click="applyFilters()"><i class="fas fa-check"></i>Apply</button>
                                     </div>
                                 </div>
