--- a/herams/overview.html
+++ b/herams/overview.html
@@ -117,14 +117,16 @@
                                         <dropdown
                                                 icon="img/filter_where.svg"
                                                 value="Nigeria"
-                                                type="location"/>
+                                                type="location"
+                                                ng-cloak />
                                     </div>
                                     <div class="filter-calendar">
                                         <!--<datepicker date="date"></datepicker>-->
                                         <dropdown
                                                 icon="img/filter_when.svg"
                                                 value="date"
-                                                type="date"/>
+                                                type="date"
+                                                ng-cloak />
                                     </div>
                                     <div class="filter-HF">
                                         <dropdown
@@ -161,6 +163,7 @@
                                     items="states"
                                     type="location"
                                     grouped="true"
+                                     ng-cloak
                             ></filters-popover>
                             <filters-popover
                                     id="popover-location-2"
@@ -168,6 +171,7 @@
                                     items=""
                                     type="location"
                                     grouped="true"
+                                     ng-cloak
                             ></filters-popover>
                         </div>
                         <div class="filters-popover filter-HF">
@@ -183,6 +187,7 @@
                                     type="date"
                                     grouped="false"
                                     singlechoice="true"
+                                     ng-cloak
                             ></filters-popover>
                         </div>
                     </div>
