--- a/herams/overview.html
+++ b/herams/overview.html
@@ -121,12 +121,14 @@
                                                 ng-cloak />
                                     </div>
                                     <div class="filter-calendar">
-                                        <!--<datepicker date="date"></datepicker>-->
+                                        <datepicker date="date"></datepicker>
+<!--
                                         <dropdown
                                                 icon="img/filter_when.svg"
                                                 value="date"
                                                 type="date"
                                                 ng-cloak />
+-->
                                     </div>
                                     <div class="filter-HF">
                                         <dropdown
@@ -181,6 +183,7 @@
                                     grouped="false"
                             ></filters-popover>
                         </div>
+<!--
                         <div class="filters-popover filter-calendar">
                             <filters-popover
                                     items="surveysDates"
@@ -190,6 +193,7 @@
                                      ng-cloak
                             ></filters-popover>
                         </div>
+-->
                     </div>
                     <!-- Modals -->
                     <div class="modal fade" id="advncdSrchModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
