--- a/herams/js/overview/directives/filters/advanced_search.html
+++ b/herams/js/overview/directives/filters/advanced_search.html
@@ -42,7 +42,8 @@
                              <img src="img/filters/select_off.png"     ng-if="getQStatus(group.title,question.code)==0" ng-click="selectAllQ($event, group.title,question.code,0)"/>
                              <img src="img/filters/select_all.png"     ng-if="getQStatus(group.title,question.code)==1" ng-click="selectAllQ($event, group.title,question.code,1)"/>
                              <img src="img/filters/select_partial.png" ng-if="getQStatus(group.title,question.code)==2" ng-click="selectAllQ($event, group.title,question.code,2)"/>
-                             <span ng-bind-html="question.text"></span>
+                             <!--<span ng-bind-html="question.text"></span>-->
+                             <span>{{ trimQuestiontxt(question.text) }}</span>
                              <img src="img/filters/arrow_main-criteria.png" class="q-collapse-chevron" ng-class="{'collapse':isQExpanded(question.code)}"/>
                          </div>
                         <div class="question-answers-list" ng-class="question.code">
