--- a/herams/js/overview/directives/filters/list_advanced_filters.html
+++ b/herams/js/overview/directives/filters/list_advanced_filters.html
@@ -1,4 +1,8 @@
 <div class="advanced-list-modal">
+    {{data.advanced_filters_src}}
+    <br/>
+    {{data.advanced_filters_applied}}
+<!--
      <ul>
          <li class="group-name" ng-repeat="group in getData() track by $index" ng-if="grpHasSelection(group)">
              <div class="group-title">
@@ -12,7 +16,7 @@
                              <div class="question-text"><span ng-bind-html="question.text"></span></div>
                              <div class="question-answers-list">
                                  <ul>
-                                     <li class="question-answer"  ng-repeat="answer in question.answers">
+                                     <li class="question-answer" ng-repeat="answer in question.answers">
                                          <div class="answer-text" ng-if="isFilterA(question.code,answer.code)">
                                              -&nbsp;&nbsp;<span ng-bind-html="answer.text"></span>
                                          </div>
@@ -25,4 +29,5 @@
              </div>
          </li>
      </ul>
+-->
 </div>
