--- a/herams/js/overview/directives/filters/filters_popovers.html
+++ b/herams/js/overview/directives/filters/filters_popovers.html
@@ -2,9 +2,12 @@
      <!-- Header -->
      <div class="popover-hdr" ng-if="title!=null">
          {{title}}
+<!--
          <img src="img/filters/select_all.png" ng-show="getLevelStatus()==1" ng-click="checkLevel($event)""/>
          <img src="img/filters/select_off.png" ng-show="getLevelStatus()==0" ng-click="checkLevel($event)"/>
          <img src="img/filters/select_partial.png" ng-show="getLevelStatus()==2" ng-click="checkLevel($event)"/>
+-->
+         {{droplevel}} / {{getLevelStatus()}}<img ng-src="{{ setChckBx(getLevelStatus())}}" ng-click="checkLevel($event)"/>
      </div>
      <ul>
          <!-- Multiple Choice -->
@@ -16,9 +19,12 @@
              <span class="checkbox" ng-click="checkItem($event,item)">
                  <img src="img/filters/select_all.png" ng-show="isSelected(item)==1"/>
                  <img src="img/filters/select_off.png" ng-show="isSelected(item)==0"/>
-                 <img src="img/filters/select_partial.png" ng-show="isSelected(item)==2" ng-click="checkLevel($event)"/>
+                 <img src="img/filters/select_partial.png" ng-show="isSelected(item)==2"/>
+<!--
+                <img ng-src="{{ setItemChckBx(item)}}" ng-click="checkItem($event,item)"/>
+-->
              </span>
-             <span class="chevron" ng-class="{'showing': openNext!=null}">
+             <span class="chevron" ng-click="clickFilter($event)" ng-class="{'showing': openNext!=null}">
                  <img src="img/filters/arrow_filters_location_big2.png"/>
              </span>
          </li>
