--- a/herams/overview.html
+++ b/herams/overview.html
@@ -302,6 +302,7 @@
 
   <script src="../node_modules/@esri/arcgis-to-geojson-utils/dist/arcgis-to-geojson.js"></script>
   <script src="../node_modules/lodash/lodash.js"></script>
+  <script src="../node_modules/angular-i18n/angular-locale_en-us.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
