--- a/herams/index.html
+++ b/herams/index.html
@@ -115,6 +115,7 @@
 
   <script src="../node_modules/@esri/arcgis-to-geojson-utils/dist/arcgis-to-geojson.js"></script>
   <script src="../node_modules/lodash/lodash.js"></script>
+  <script src="../node_modules/angular-i18n/angular-locale_en-us.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -129,10 +130,10 @@
   <script src="js/common/services/commonSvc.js"></script>
   <script src="js/common/services/esritogeojsonSvc.js"></script>
   <script src="js/common/services/LayerPopupSvc.js"></script>
-  <script src="js/home/controllers/home.js"></script>
-  <script src="js/home/services/MainMapSvc.js"></script>
   <script src="js/home/directives/entry-popups.js"></script>
   <script src="js/home/directives/homemap.js"></script>
+  <script src="js/home/controllers/home.js"></script>
+  <script src="js/home/services/MainMapSvc.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
 
