R2 Review - Clear and filters all set

--- a/herams/overview.html
+++ b/herams/overview.html
@@ -198,7 +198,7 @@
                           </div>
                           <div class="modal-footer">
                               <div class="advanced-filters-cnt">Total: {{getAdvancedFiltersCnt()}} filters</div>
-                                <button type="button" class="btn btn-secondary" ng-click="clearSetFilters()"><i class="fas fa-times"></i>Clear</button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="clearSetFilters()"><i class="fas fa-times"></i>Clear</button>
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="applyFilters()"><i class="fas fa-check"></i>Apply</button>
                           </div>
                         </div>
