R2 Review - removed 'no match with these criteria' msg

--- a/herams/js/overview/directives/hf-map.html
+++ b/herams/js/overview/directives/hf-map.html
@@ -17,7 +17,7 @@
 -->
 <!-------------------- END DO NOT REMOVE ------------------->
 
-    <div id="mapid-wkspace">No match with these criteria / No data available</div>
+    <div id="mapid-wkspace">No data available</div>
     <div class="map-legend">
         <div class="legend-part" ng-cloak>
             <div ng-repeat="legendItem in  legend track by $index">
