R2 - Types: selects 'All' implementation

--- a/herams/overview.html
+++ b/herams/overview.html
@@ -172,6 +172,7 @@
                         </div>
                         <div class="filters-popover filter-HF">
                             <filters-popover
+                                    title="All"
                                     items="hftypes"
                                     type="hf"
                                     grouped="false"
