R2 - rename all advanced filters related elements

--- a/herams/js/overview/directives/filters/advanced_search_toberestored.html
+++ b/herams/js/overview/directives/filters/advanced_search_toberestored.html
@@ -1,7 +1,7 @@
 <div class="advanced-search-modal">
     <div class="advanced-filters-header">
         <div class="advanced-filters-title" ng-click="expandAllGrps()">
-            <h5>Filters</h5>
+            <h5>Advanced filters</h5>
             <span class="filters-collapse-btn">
                 <img src="img/filters/arrow_main-criteria.png" ng-class="{'collapse':isExpanded}"/>
             </span>
