--- a/herams/overview.html
+++ b/herams/overview.html
@@ -132,12 +132,12 @@
                                     </div>
                                     <div class="filter-advanced">
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#advncdSrchModal">
-                                          More filters
+                                          advanced filters
                                         </button>
                                     </div>
                                     <div class="filter-advanced-view">
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#advncdViewModal">
-                                          View filters ({{getAdvancedFiltersCnt()}})
+                                          view advanced filters ({{getAdvancedFiltersCnt()}})
                                         </button>
                                     </div>
                                     <div class="filter-btns">
