--- a/herams/overview.html
+++ b/herams/overview.html
@@ -132,12 +132,12 @@
                                     </div>
                                     <div class="filter-advanced">
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#advncdSrchModal">
-                                          advanced filters
+                                          Advanced filters
                                         </button>
                                     </div>
                                     <div class="filter-advanced-view">
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#advncdViewModal">
-                                          view advanced filters ({{getAdvancedFiltersCnt()}})
+                                          View advanced filters ({{getAdvancedFiltersCnt()}})
                                         </button>
                                     </div>
                                     <div class="filter-btns">
@@ -209,7 +209,7 @@
                       <div class="modal-dialog modal-dialog-centered" role="document">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">{{getAdvancedFiltersCnt()}} filters</h5>
+                            <h5 class="modal-title" id="exampleModalLabel">{{getAdvancedFiltersCnt()}} Advanced filters</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                               <span aria-hidden="true">&times;</span>
                             </button>
